k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cs720
  labels:
    name: cs720
    app.kubernetes.io/name: cs720
    app.kubernetes.io/part-of: cs720-platform
